--- a/src/Components/StartPage.css
+++ b/src/Components/StartPage.css
@@ -10,12 +10,16 @@
 
 .start-page .upper-rigt-img {
   position: absolute;
+  /* border: 1px solid red; */
+  width: 9.7rem;
   top: 0;
   right: 0;
 }
 
 .start-page .lower-left-img {
   position: absolute;
+  /* border: 1px solid red; */
+  width: 9.25rem;
   bottom: 0;
   left: 0;
 }
