--- a/src/Pages/GamePage.css
+++ b/src/Pages/GamePage.css
@@ -1,5 +1,5 @@
 .game-page {
-  /* border: 1px solid brown; */
+  border: 1px solid brown;
   width: 100%;
   height: 100%;
   display: flex;
@@ -22,4 +22,22 @@
   width: 4rem;
   bottom: 0;
   left: 0;
+}
+
+.quizes-container {
+  border: 1px solid darkorange;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.control-panel {
+  border: 1px solid green;
+  width: 50%;
+  height: 4rem;
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
 }
