--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   background-color: #f5f7fb;
   /* border: 1px solid blue; */
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   /* font-family: Karla; */
   color: #293264;
 }
