--- a/src/Components/AnswerOption/AnswerOption.css
+++ b/src/Components/AnswerOption/AnswerOption.css
@@ -1,3 +1,8 @@
 .answer-option {
-  background-color: aquamarine;
+  /* background-color: aquamarine; */
+  min-width: 4rem;
+  height: 1.3rem;
+  border: 1px solid #4d5b9e;
+  border-radius: 8px;
+  text-align: center;
 }
