--- a/src/Components/Quiz/Quiz.css
+++ b/src/Components/Quiz/Quiz.css
@@ -3,7 +3,7 @@
   border-bottom: 1px solid #dbdef0;
   /* border-bottom-width: 0.05rem; */
   width: 100%;
-  height: 5.2rem;
+  min-height: 5.2rem;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -12,11 +12,15 @@
 
 .quiz-question {
   color: red;
+  font-size: 1rem;
+  margin-top: 1rem;
 }
 
 .answers-section {
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
   margin-top: 1rem;
   display: flex;
   gap: 1rem;
+  flex-wrap: wrap;
+  margin-bottom: 1rem;
 }
