--- a/src/Pages/StartPage.css
+++ b/src/Pages/StartPage.css
@@ -1,7 +1,8 @@
 .start-page {
   /* border: 1px solid green; */
   width: 100%;
-  height: 100%;
+  /* min-height: 100%; */
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,7 +18,7 @@
 }
 
 .start-page .lower-left-img {
-  position: absolute;
+  position: fixed;
   /* border: 1px solid red; */
   width: 9.25rem;
   bottom: 0;
