--- a/src/Pages/GamePage.css
+++ b/src/Pages/GamePage.css
@@ -2,7 +2,7 @@
   border: 1px solid brown;
   width: 100%;
   min-height: 100%;
-  /* height: 100vh; */
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -50,4 +50,10 @@
   border-radius: 10px;
   background-color: #4d5b9e;
   color: #f5f7fb;
+}
+
+@media screen and (min-width: 850px) {
+  .game-page {
+    height: 100vh;
+  }
 }
