quiz component and answers placement modified

--- a/src/Components/AnswerOption/AnswerOption.css
+++ b/src/Components/AnswerOption/AnswerOption.css
@@ -4,5 +4,8 @@
   height: 1.3rem;
   border: 1px solid #4d5b9e;
   border-radius: 8px;
-  text-align: center;
+  font-size: 0.75rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
