--- a/src/Pages/GamePage.css
+++ b/src/Pages/GamePage.css
@@ -1,5 +1,5 @@
 .game-page {
-  border: 1px solid brown;
+  /* border: 1px solid brown; */
   width: 100%;
   min-height: 100%;
 
@@ -32,6 +32,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 1.5rem;
 }
 
 .control-panel {
@@ -42,6 +43,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 1rem;
+  margin-bottom: 1.5rem;
 }
 
 .check-answers-btn {
