--- a/src/Components/Quiz/Quiz.css
+++ b/src/Components/Quiz/Quiz.css
@@ -6,7 +6,7 @@
   min-height: 5.2rem;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
 }
 
@@ -17,10 +17,16 @@
 }
 
 .answers-section {
-  /* border: 1px solid blue; */
+  /* border: 1px solid greenyellow; */
   margin-top: 1rem;
   display: flex;
   gap: 1rem;
   flex-wrap: wrap;
   margin-bottom: 1rem;
+}
+
+@media screen and (min-width: 850px) {
+  .quiz-container {
+    align-items: flex-start;
+  }
 }
