--- a/src/Components/AnswerOption/AnswerOption.css
+++ b/src/Components/AnswerOption/AnswerOption.css
@@ -14,3 +14,19 @@
   background-color: #d6dbf5;
   border: none;
 }
+
+.correct-answer {
+  border: none;
+  background-color: #94d7a2;
+}
+
+.wrong-answer {
+  border: none;
+  color: #293264;
+  background-color: #f8bcbc;
+}
+
+.neuter-answer {
+  border: #4d5b9e;
+  color: #293264;
+}
