--- a/src/Pages/GamePage.css
+++ b/src/Pages/GamePage.css
@@ -2,7 +2,6 @@
   /* border: 1px solid brown; */
   width: 100%;
   min-height: 100%;
-
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -36,8 +35,8 @@
 }
 
 .control-panel {
-  border: 1px solid green;
-  width: 60%;
+  /* border: 1px solid green; */
+  width: 90%;
   height: 4rem;
   display: flex;
   justify-content: center;
@@ -63,6 +62,11 @@
   background-color: #4d5b9e;
   color: #f5f7fb;
   font-size: 0.75rem;
+}
+
+.end-msg {
+  font-size: 0.7rem;
+  font-weight: bold;
 }
 
 @media screen and (min-width: 850px) {
