--- a/src/Pages/GamePage.css
+++ b/src/Pages/GamePage.css
@@ -39,11 +39,10 @@
   width: 70%;
   height: 4rem;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   margin-top: 1rem;
   margin-bottom: 1.5rem;
-  /* gap: 1.5rem; */
   flex-wrap: wrap;
 }
 
@@ -68,15 +67,15 @@
 .end-msg {
   font-size: 0.9rem;
   font-weight: bold;
-  margin-bottom: 0.75rem;
+  /* margin-bottom: 0.75rem; */
 }
 
 @media screen and (min-width: 650px) {
   .control-panel {
-    gap: 1.5rem;
+    /* gap: 1.5rem; */
   }
   .end-msg {
-    margin-bottom: 0;
+    /* margin-bottom: 0; */
   }
 }
 
