--- a/src/Pages/GamePage.css
+++ b/src/Pages/GamePage.css
@@ -34,6 +34,10 @@
   margin-top: 1.5rem;
 }
 
+.loading-msg {
+  font-size: 2rem;
+}
+
 .control-panel {
   /* border: 1px solid green; */
   width: 70%;
