--- a/src/Pages/StartPage.css
+++ b/src/Pages/StartPage.css
@@ -46,4 +46,24 @@
   background-color: #4d5b9e;
   color: #f5f7fb;
   margin-top: 2rem;
+  font-size: 0.9rem;
+}
+
+@media screen and (min-width: 850px) {
+  .menu-container {
+    /* border: 1px solid red; */
+    width: 20rem;
+    height: 20rem;
+  }
+
+  .app-title {
+    font-size: 2.8rem;
+  }
+  .app-description {
+    font-size: 1.2rem;
+  }
+
+  .start-btn {
+    font-size: 1rem;
+  }
 }
