--- a/src/Pages/GamePage.css
+++ b/src/Pages/GamePage.css
@@ -85,7 +85,7 @@
 
 @media screen and (min-width: 850px) {
   .game-page {
-    height: 100vh;
+    /* height: 100vh; */
   }
 
   .all-quizes-container {
@@ -93,20 +93,25 @@
     margin-top: 1.5rem;
   }
 
+  .control-panel {
+    /* border: 1px solid green; */
+    margin-top: 2rem;
+  }
+
   .check-answers-btn {
-    font-size: 0.85rem;
-    width: 7.8rem;
-    height: 2.5rem;
+    font-size: 1rem;
+    width: 9.5rem;
+    height: 2.8rem;
   }
 
   .play-again-btn {
-    font-size: 0.85rem;
-    width: 7.3rem;
-    height: 2.2rem;
+    font-size: 1rem;
+    width: 8.2rem;
+    height: 2.5rem;
   }
 
   .end-msg {
     margin-bottom: 0;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
   }
 }
