--- a/src/Pages/StartPage.css
+++ b/src/Pages/StartPage.css
@@ -52,18 +52,22 @@
 @media screen and (min-width: 850px) {
   .menu-container {
     /* border: 1px solid red; */
-    width: 20rem;
-    height: 20rem;
+    width: 25rem;
+    height: 25rem;
   }
 
   .app-title {
-    font-size: 2.8rem;
+    font-size: 3.5rem;
+    margin-bottom: 1rem;
   }
   .app-description {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
   }
 
   .start-btn {
-    font-size: 1rem;
+    width: 13rem;
+    height: 3.6rem;
+    font-size: 1.1rem;
+    margin-top: 2.5rem;
   }
 }
