--- a/src/Pages/StartPage.css
+++ b/src/Pages/StartPage.css
@@ -18,7 +18,7 @@
 }
 
 .start-page .lower-left-img {
-  position: fixed;
+  position: absolute;
   /* border: 1px solid red; */
   width: 9.25rem;
   bottom: 0;
